<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="293dp"
        android:layout_height="431dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/sign_in_text"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="310dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:ems="14"
            android:fontFamily="@font/raleway"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:isScrollContainer="false"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/email"
            android:layout_width="310dp"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:ems="14"
            android:fontFamily="@font/raleway"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:isScrollContainer="false"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="310dp"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:ems="14"
            android:fontFamily="@font/raleway"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="307dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:srcCompat="@drawable/ic_sing_up"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>