<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFED8"
    tools:context=".SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="322dp"
        android:layout_height="523dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/sign_in_text"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="310dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:ems="14"
            android:fontFamily="@font/raleway"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:isScrollContainer="false"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="310dp"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:ems="14"
            android:fontFamily="@font/raleway"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="307dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:srcCompat="@drawable/ic_sign_in"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

